--- a/style.css
+++ b/style.css
@@ -132,7 +132,7 @@ body {
     grid-template-columns: repeat(4, 1fr);
   }
 }
-/* @media (max-width: 768px) and (orientation: landscape) {
+@media (max-width: 768px) and (orientation: landscape) {
   .container {
     width: 100%;
     height: 100%;
@@ -142,6 +142,6 @@ body {
     grid-template-columns: repeat(8, 1fr); 
     grid-template-rows: repeat(5, 1fr);
   }
-} */
+}
 
 
