--- a/style.css
+++ b/style.css
@@ -123,24 +123,14 @@ body {
     text-align: center;
     font-size: 1.3rem;
 }
-@media (max-width: 480px) and (orientation: portrait) {
+@media (max-width: 500px) and (orientation: portrait) {
   .container {
     width: 90%;
-    height: 70%;
+/*     height: 70%; */
+    height: auto;
   }
   .buttons {
     grid-template-columns: repeat(4, 1fr);
-  }
-}
-@media (max-width: 768px) and (orientation: landscape) {
-  .container {
-    width: 100%;
-    height: 100%;
-    border-radius: 0;
-  }
-  .buttons {
-    grid-template-columns: repeat(8, 1fr); 
-    grid-template-rows: repeat(5, 1fr);
   }
 }
 
